syntax = "proto3";
package accountpb;
import "github.com/dappley/go-dappley/client/pb/account.proto";


message AccountManager{
    repeated Account accounts = 1;
    bytes passPhrase = 2;
    bool locked = 3;
}


